@@ -57,3 +57,6 @@
 - removed non working wmv channels
 [B]Version 2.4.7[/B]
 - Fixed sorting and added some new channels in zem section
+
+[B]Version 3.0.0[/B]
+- Support for "All sources" in the settings and context menu. if default source is not available then it will show all available. Also added Playwire video playing support too.
